src/components/search/_index.scss
@use "../../vendor/nhsuk-frontend" as *;

// Site search using Accessible autocomplete
// Styles below are based on the default accessible autocomplete style sheet

$_icon-size: 28px;
$_input-padding-right: 12px + $_icon-size;

@include nhsuk-exports("nhsuk-eleventy-plugin/components/search") {
  .nhsuk-header__search-form[hidden] {
    display: none;
  }

  .app-search__wrapper {
    background-color: $nhsuk-form-element-background-colour;
    border-radius: $nhsuk-border-radius;
    min-width: 260px;
    position: relative;
  }

  .nhsuk-header__search-input.app-search__hint,
  .nhsuk-header__search-input.app-search__input {
    background-color: transparent;
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M19.71 18.29l-4.11-4.1a7 7 0 1 0-1.41 1.41l4.1 4.11a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42zM5 10a5 5 0 1 1 5 5 5 5 0 0 1-5-5z' fill='%23005eb8'></path></svg>");
    background-position: center right nhsuk-spacing(1);
    background-repeat: no-repeat;
    background-size: $_icon-size;
    border-radius: $nhsuk-border-radius;
    padding-right: $_input-padding-right;
    width: 100%;
  }

  .nhsuk-header__search-input.app-search__hint {
    color: nhsuk-colour("grey-2");
    position: absolute;
  }

  .app-search__menu {
    background-color: nhsuk-colour("white");
    border-radius: $nhsuk-border-radius;
    color: $nhsuk-text-colour;
    margin: 0;
    max-height: 560px;
    overflow-x: hidden;
    padding: 0;
    width: 100%;
  }

  .app-search__menu--visible {
    display: block;
  }

  .app-search__menu--hidden {
    display: none;
  }

  .app-search__menu--overlay {
    box-shadow: 0 0 3px 0 rgba(nhsuk-colour("grey-1"), 0.5);
    left: 0;
    position: absolute;
    top: 100%;
    z-index: 100;
  }

  .app-search__option {
    border-bottom: 1px solid nhsuk-colour("grey-5");
    color: $nhsuk-secondary-text-colour;
    cursor: pointer;
    display: block;
    margin: 0;
    padding: nhsuk-spacing(3);
    position: relative;

    @include nhsuk-font($size: 16);

    & > * {
      pointer-events: none;
    }
  }

  // Add a transparent outline for when users change their colours.
  .app-search__option--focused {
    border-bottom-color: transparent;
    outline: $nhsuk-focus-width solid transparent;
    outline-offset: -$nhsuk-focus-width;

    @include nhsuk-focused-text;
  }

  .app-search__option--no-results {
    cursor: default;
  }

  .app-search__option-title {
    text-decoration: underline;

    @include nhsuk-link-style-default;

    .app-search__option:hover & {
      text-decoration: none;

      @include nhsuk-link-style-hover;
    }

    .app-search__option--focused & {
      color: $nhsuk-focus-text-colour;
      text-decoration: none;
    }
  }

  .app-search__option-title,
  .app-search__option-metadata {
    display: block;
  }
}

